--- a/app.json
+++ b/app.json
@@ -1,5 +1,20 @@
 {
   "expo": {
-    "sdkVersion": "23.0.0"
+    "sdkVersion": "23.0.0",
+    "orientation":"portrait",
+    "name":"UdacityFitness",
+    "description":"The best traiathlon tracker ever",
+    "slug":"udacity finess",
+    "version":"1.0",
+    "icon":"https://manhle.com/udacitifitness-512.png",
+    "notification":{
+      "icon":"https://manhle.com/udacitifitness-512.png"
+    },
+    "ios":{
+      "bundleIdentification":"org.udacityfitness.exp"
+    },
+    "android":{
+      "package" :"org.udacityfitness.exp"
+    }
   }
 }
